# RustPlayground

./: README.md
diceroll/: .gitignore  Cargo.toml
diceroll/src/: handler.rs  main.rs
diceroll/src/handler/: simul.rs
diceroll/static/: index.html
hello_cargo/src/: main.rs
hello_cargo/static/: index.html
